# sojourn

./: .gitignore  .gitmodules  Sojourn.sln  SojournClient.sln  SojournServer.sln
assets/scripts/: bootstrap.lua  some.lua  test.lua
spikes/controls/: controls.sln  controls.vcxproj  controls.vcxproj.filters
spikes/controls/Application/: Main.cpp  Resource.h  Window.cpp  (+3 more)
spikes/statescript/: CMakeLists.txt
spikes/statescript/src/: app.cpp  directx12.cpp  main.cpp  msw.cpp  statescript.cpp
spikes/statescript/src/include/: app.hpp  directx12.hpp  pch.hpp  statescript.hpp  system.hpp
src/: Sojourn.vcxproj  Sojourn.vcxproj.filters  pch.hpp  sojourn_install.py
src/app/: app_main.cpp  app_main.hpp  app_window.cpp  app_window.hpp
src/client/: SojournClient.vcxproj  SojournClient.vcxproj.filters  client_main.cpp  client_main.hpp  client_window.cpp  client_window.hpp  pch.hpp  sojourn_install.py
src/engine/: engine_camera.cpp  engine_device_resources.cpp  engine_dx_helper.hpp  engine_resources.cpp  engine_scripts.cpp  engine_scripts.hpp  engine_shader.cpp  engine_shader.hpp  engine_state_manager.cpp  engine_state_manager.hpp  engine_step_timer.hpp  engine_utilities.cpp  engine_utilities.hpp  graphics_adapter.cpp  graphics_adapter.hpp  graphics_camera.cpp  graphics_shaders.cpp  graphics_shaders.hpp  network_address.cpp  network_address.hpp  network_main.cpp  network_main.hpp  network_socket_udp.cpp  network_socket_udp.hpp
src/game/: game_main.h
src/server/: SojournServer.vcxproj  SojournServer.vcxproj.filters  pch.cpp  pch.hpp  server_main.cpp  server_main.hpp
(+143 files in other folders)
